--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <p>Kami Mengutamakan Kepuasan Pelanggan Kami</p>
         </div>
 
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
