--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Easy Desain</a></h4>
-              <p>Desain Sendiri atau Kami yang Desain</p>
+              <p>Desain Sendiri atau Kami yang Desain Kemudahan untuk Anda</p>
             </div>
           </div>
 
@@ -472,7 +472,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-        Develop by <a href="https:/rudigidev.github.io/" target="_blank">rudigidev</a>
+        Develop by <a href="https://rudigidev.github.io">rudigidev</a>
       </div>
     </div>
   </footer><!-- End Footer -->
