--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
           data-aos="fade-up" data-aos-delay="200">
-          <h1>Butuh <Strong>3D?</Strong></h1>
+          <h1 style="font-size: 3em;">Butuh <Strong>3D?</Strong></h1>
           <h2>Cetak'in Aja</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Whatsapp</a>
